@@ -14,7 +14,12 @@
 
 
 function pluginreg_extension_main () {
-	global $config;
+    global $config;
+    if (! give_acl ($config['id_user'], 0, "PM") && ! is_user_admin ($config['id_user'])) {
+	    audit_db ($config['id_user'], $REMOTE_ADDR, "ACL Violation", "Trying to access Setup Management");
+	    require ("general/noaccess.php");
+	    return;
+    }
 
 	print_page_header (__('Plugin registration'), "images/extensions.png", false, "", true, "" );
 
